--- a/README
+++ b/README
@@ -1,5 +1,27 @@
 Syd's Box
 =========
-Sydbox is a `ptrace`(2) based sandboxing utility for Linux.
+Sydbox is a [ptrace](http://man7.org/linux/man-pages/man2/ptrace.2.html) & [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process access to filesystem and network resources.
+
+Documentation
+=============
+
+Read the fine manual of [sydbox](https://dev.exherbo.org/~alip/sydbox/sydbox.html) and [sydfmt](https://dev.exherbo.org/~alip/sydbox/sydbox.html)
+
+Blog Posts
+==========
+
+* [Sydbox: Stop Skype P2P/Call Home: People Have The Right To Communicate W\o Eavesdropping](https://tinyurl.com/sydbox-stop-skype-call-home)
+* [Recent Linux Changes Help Safe & Secure w\o Root](https://tinyurl.com/recent-linux-changes-help-safe)
+* [A Study in Sydbox](https://tinyurl.com/a-study-in-sydbox)
+* [Pink's Tracing Library](https://tinyurl.com/pink-s-tracing-library)
+* [Sydbox Logo Survey](https://tinyurl.com/sydbox-logo-survey)
+* [Sydbox: Default Sandbox of Exherbo](https://tinyurl.com/sydbox-default-sandbox-exherbo)
+* [Disabling External Commands in Metadata Phase (Exherbo&gt;Gentoo)](https://tinyurl.com/no-commands-in-metadata-phase)
+* [ptrace on IA64](https://tinyurl.com/ptrace-on-ia64)
+* [Network Sandboxing and /proc (Exherbo&gt;Gentoo)](https://tinyurl.com/network-sandboxing-and-proc)
+* [ptrace on FreeBSD](https://tinyurl.com/ptrace-on-freebsd)
+* [Running Untrusted Binaries that Access the Network](https://tinyurl.com/running-untrusted-binaries)
+* [Proper Network Sandboxing (Exherbo&gt;Gentoo)](https://tinyurl.com/proper-network-sandboxing)
+* [Deprecating addpredict (Exherbo&gt;Gentoo)](https://tinyurl.com/deprecating-addpredict-gentoo)
 
 <!-- vim: set tw=80 ft=markdown spell spelllang=en sw=4 sts=4 et : -->
