--- a/README
+++ b/README
@@ -2,6 +2,45 @@ Syd's Box
 =========
 Sydbox is a [ptrace](http://man7.org/linux/man-pages/man2/ptrace.2.html) & [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process access to filesystem and network resources.
 
+Pandora
+=======
+Pandora's Box: A helper for SydBox, a ptrace & seccomp based sandbox to make sandboxing practical.
+This makes it easy for the end user to use secure computing for practical purposes.
+
+Simple Example:
+```
+# Step 1: Inspect and gather data about the given process.
+# In this case, we're going to try with
+# Firefox, https://www.mozilla.org/de/firefox/new/
+$ pandora profile firefox
+# browse using firefox for a while, let pandora gather data.
+# the browser is running under a tracer so it'll run noticably slower.
+# use --bin /path/to/sydbox, if sydbox is not in PATH
+# use --output firefox.syd-1 to specify an alternative output path for profile.
+$ $EDITOR out.syd-1
+# Inspect what the browser has been doing.
+# Enable, disable additional options or turn paths into wildcards such as
+# /home/*** to allow home and everything beyond /home
+# the usual glob characters, ?, * are supported.
+# Check sydbox manual page to learn more on how pattern matching works.
+# Enable, disable additional network addresses unless you're using a SOCKS5 proxy
+# which does remote DNS lookups, e.g:
+#
+# whitelist/network/connect+inet:127.0.0.1@9050
+#
+# for Tor, https://www.torproject.org/
+# Check sydbox manual page to learn more on how address matching works.
+#
+$ pandora box -c out.syd-1 firefox
+# Run the browser under secure computing with full protection.
+# Check sydbox manual page for a list of system call protections.
+# Check the console for possible access violations over time.
+# Edit the profile file as necessary and update restrictions.
+#
+# Share your profile with other people and help others use secure computing!
+#
+```
+
 Documentation
 =============
 
