--- a/README
+++ b/README
@@ -1,6 +1,11 @@
 Syd's Box
 =========
-Sydbox is a [ptrace](http://man7.org/linux/man-pages/man2/ptrace.2.html) & [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process access to filesystem and network resources.
+SydBox is a [ptrace](http://man7.org/linux/man-pages/man2/ptrace.2.html) & [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process access to filesystem and network resources.
+
+**NOTE:** Pandora is in its early stages of development. To be able to use pandora
+you should clone SydBox from [git](https://git.exherbo.org/git/sydbox-1.git).
+
+Browse at https://git.exherbo.org/sydbox-1.git/?h=inspect
 
 Pandora
 =======
