add sydbox profile for firefox
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/README
+++ b/README
@@ -131,6 +131,8 @@ Last but not least,
 
 **Share your profile with other people and help others use secure computing!**
 
+Here is a Firefox profile edited by yours truly:
+
 Documentation
 =============
 
