--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Syd's Box
 =========
 SydBox is a [ptrace](http://man7.org/linux/man-pages/man2/ptrace.2.html) & [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process access to filesystem and network resources.
 
-SydBox uses autotools. To build, simply do `./configure`, `make` and `make install`.
+SydBox uses autotools. To build, simply do `./configure`, `make` and `sudo make install`.
 
 To use SydBox you need a recent [Linux](https://kernel.org) kernel, preferably 3.5
 or newer which has [secure computing mode](https://en.wikipedia.org/wiki/Seccomp)
@@ -10,8 +10,8 @@ facility. Make sure you build SydBox with **--enable-seccomp** given to
 `./configure`. SydBox works fine without it but it is going to be noticably slower
 and less secure. See the [SydBox manual
 page](https://dev.exherbo.org/~alip/sydbox/sydbox.html) on more information about
-secure computing mode protections. The parts which are of particular interest to
-read are:
+[secure computing mode](https://en.wikipedia.org/wiki/Seccomp) protections. The
+parts which are of particular interest to read are:
 
 - [core/trace/use_seccomp](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-trace-use_seccomp),
 - [core/restrict/file_control](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-restrict-fcntl)
@@ -21,10 +21,13 @@ read are:
 on `i386` and `x86_64` architectures.
 
 In addition, it is advised that you enable the kernel option
-`CONFIG_CROSS_MEMORY_ATTACH=y`.
+`CONFIG_CROSS_MEMORY_ATTACH=y` so that SydBox can use the functions
+[process_vm_readv](https://man7.org/linux/man-pages/man2/process_vm_readv.2.html)
+and [process_vm_writev](https://man7.org/linux/man-pages/man2/process_vm_readv.2.html).
+These system calls are available in Linux since 3.2.
 
-**NOTE:** Pandora is in its early stages of development. To be able to use pandora
-you should clone SydBox from [git](https://git.exherbo.org/git/sydbox-1.git).
+**NOTE:** Pandora is in its early stages of development. To be able to use Pandora
+you should build and install SydBox from [git](https://git.exherbo.org/git/sydbox-1.git).
 
 - Browse: https://git.exherbo.org/sydbox-1.git/
 - Exheres:
