update README to include a BUGS section
Signed-off-by: Alï Polatel <alip@exherbo.org>

--- a/README
+++ b/README
@@ -154,6 +154,26 @@ Here is a Firefox profile edited by yours truly:
 
 https://git.exherbo.org/sydbox-1.git/plain/data/firefox.syd-1
 
+Bugs
+====
+Read [BUGS](https://git.exherbo.org/sydbox-1.git/plain/BUGS).
+
+Below are the details of the author. **Mail is preferred. Attaching poems encourages
+consideration tremendously.**
+
+```
+Hey you, out there beyond the wall,
+Breaking bottles in the hall,
+Can you help me?
+```
+
+- **Alï Polatel** [alip@exherbo.org](mailto:alip@exherbo.org)
+- **Exherbo:** https://git.exherbo.org/dev/alip.git/
+- **Github:** https://github.com/alip/
+- **Twitter:** https://twitter.com/hayaliali
+- **Mastodon:** https://mastodon.online/@alip
+- **IRC:** alip at [Libera](https://libera.chat/)
+
 Documentation
 =============
 
