--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 Syd's Box
 =========
+
+<img src="https://dev.exherbo.org/~alip/images/sydbox160.png" alt="SydBox" title="img: That cat's something I can't explain!"/>
+
 SydBox is a [ptrace](http://man7.org/linux/man-pages/man2/ptrace.2.html) & [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process access to filesystem and network resources.
 
 SydBox uses autotools. To build, simply do `./configure`, `make` and `sudo make install`.
