--- a/README
+++ b/README
@@ -3,7 +3,10 @@ Syd's Box
 
 <img src="https://dev.exherbo.org/~alip/images/sydbox160.png" alt="SydBox" title="img: That cat's something I can't explain!"/>
 
-SydBox is a [ptrace](http://man7.org/linux/man-pages/man2/ptrace.2.html) & [seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based sandbox for modern [Linux](https://kernel.org) machines to sandbox unwanted process access to filesystem and network resources.
+SydBox is a [ptrace](http://man7.org/linux/man-pages/man2/ptrace.2.html) &amp;
+[seccomp](http://man7.org/linux/man-pages/man2/seccomp.2.html) based sandbox for
+modern [Linux](https://kernel.org) machines to sandbox unwanted process access to
+filesystem and network resources.
 
 See: https://sydbox.exherbo.org
 
@@ -11,25 +14,59 @@ SydBox uses autotools. To build, simply do `./configure`, `make` and `sudo make 
 
 To use SydBox you need a recent [Linux](https://kernel.org) kernel, preferably 3.5
 or newer which has [secure computing mode](https://en.wikipedia.org/wiki/Seccomp)
-facility. Make sure you build SydBox without **--disable-seccomp**.
-SydBox works fine without SecComp but it is going to be noticably slower
-and less secure. See the [SydBox manual
+facility. In addition, it is advised that you enable the kernel option
+`CONFIG_CROSS_MEMORY_ATTACH=y` so that SydBox can use the functions
+[process_vm_readv](https://man7.org/linux/man-pages/man2/process_vm_readv.2.html)
+and [process_vm_writev](https://man7.org/linux/man-pages/man2/process_vm_readv.2.html).
+These system calls are available in Linux since 3.2. Note SydBox will use the file
+`/proc/pid/mem` if these system calls are unavailable or not working.
+
+Moreover, since sydbox-1.2.2, SydBox makes use of the relatively recent system calls
+[pidfd_send_signal](https://man7.org/linux/man-pages/man2/pidfd_send_signal.2.html),
+and [pidfd_getfd](https://man7.org/linux/man-pages/man2/pidfd_getfd.2.html).
+[pidfd_send_signal](https://man7.org/linux/man-pages/man2/pidfd_send_signal.2.html)
+requires Linux-5.1 or newer whereas
+[pidfd_getfd](https://man7.org/linux/man-pages/man2/pidfd_getfd.2.html)
+requires Linux-5.6 or newer. See more information on
+[kernelnewbies.org](https://kernelnewbies.org/Linux_5.6#A_new_pidfd_syscall.2C_pidfd_getfd.282.29),
+and [LWN](https://lwn.net/Articles/808997/)
+about [pidfd_getfd](https://man7.org/linux/man-pages/man2/pidfd_getfd.2.html).
+
+In addition, since sydbox-1.2.2, SydBox requires that the
+[seccomp(2)](https://man7.org/linux/man-pages/man2/seccomp.2.html) notifier supports
+the `SECCOMP_USER_NOTIF_FLAG_CONTINUE` flag to allow for the continuation of a
+syscall. See
+[commit](https://git.kernel.org/linus/fb3c5386b382d4097476ce9647260fc89b34afdb),
+[commit](https://git.kernel.org/linus/223e660bc7638d126a0e4fbace4f33f2895788c4), and
+[commit](https://git.kernel.org/linus/0eebfed2954f152259cae0ad57b91d3ea92968e8) for
+more information.
+
+After building SydBox, you can use the `--test`, or shortly `-t`, option to test if
+all the required facilities are present on the running system. If this command returns
+success, SydBox is usable on the running system:
+
+```
+$ sydbox --test || echo 'sydbox not usable!'
+sydbox: Linux/chesswob 5.11
+sydbox: [>] Checking for requirements...
+sydbox: [*] cross memory attach is functional.
+sydbox: [*] /proc/pid/mem interface is functional.
+sydbox: [*] pidfd interface is functional.
+sydbox: [*] seccomp filters are functional.
+sydbox: [>] SydBox is supported on this system!
+```
+
+See the [SydBox manual
 page](https://dev.exherbo.org/~alip/sydbox/sydbox.html) on more information about
 [secure computing mode](https://en.wikipedia.org/wiki/Seccomp) protections. The
 parts which are of particular interest to read are:
 
-- [core/trace/use_seccomp](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-trace-use_seccomp),
+- [Sandboxing](https://dev.exherbo.org/~alip/sydbox/sydbox.html#sandboxing)
+- [core/restrict/general](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-restrict-general)
 - [core/restrict/file_control](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-restrict-fcntl)
+- [core/restrict/io_control](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-restrict-ioctl)
+- [core/restrict/memory_map](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-restrict-mmap)
 - [core/restrict/shared_memory_writable](https://dev.exherbo.org/~alip/sydbox/sydbox.html#core-restrict-shm-wr)
-
-**NOTE**: [Secure computing mode](https://en.wikipedia.org/wiki/Seccomp) only works
-on `i386` and `x86_64` architectures.
-
-In addition, it is advised that you enable the kernel option
-`CONFIG_CROSS_MEMORY_ATTACH=y` so that SydBox can use the functions
-[process_vm_readv](https://man7.org/linux/man-pages/man2/process_vm_readv.2.html)
-and [process_vm_writev](https://man7.org/linux/man-pages/man2/process_vm_readv.2.html).
-These system calls are available in Linux since 3.2.
 
 **NOTE:** Pandora is in its early stages of development. To be able to use Pandora
 you need **Sydbox-1.2.1** or later.
@@ -54,7 +91,6 @@ Options: dump:yes seccomp:yes ipv6:yes netlink:yes
 
 - **seccomp:yes** indicates **--enable-seccomp** was passed on build.
 - **ipv6:yes** **IPv6 Network Sandboxing** is enabled.
-
 
 SydBox requires [Pink's Tracing Library](http://dev.exherbo.org/~alip/pinktrace/api/c/)
 
